--- a/index.html
+++ b/index.html
@@ -3,24 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="container-main">
+    <header>
+      <h1>calc</h1>
+      <div class="comp-swtich">
+        <div class="numbers">
+          <span>1</span>
+          <span>2</span>
+          <span>3</span>
+        </div>
+        <div class="switch">
+          <input type="checkbox" name="theme" value="theme1" class="selected" />
+          <input type="checkbox" name="theme" value="theme2" />
+          <input type="checkbox" name="theme" value="theme3" />
+        </div>
+      </div>
+    </header>
 
+    <div class="output"></div>
 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="cont-btns">
+      <div class="c-1">
+        <button class="bt-s d">7</button>
+        <button class="bt-s">8</button>
+        <button class="bt-s">9</button>
+        <button class="del">del</button>
+      </div>
+      <div class="c-1">
+        <button class="bt-s">4</button>
+        <button class="bt-s">5</button>
+        <button class="bt-s">6</button>
+        <button class="bt-s">+</button>
+      </div>
+      <div class="c-1">
+        <button class="bt-s">1</button>
+        <button class="bt-s">2</button>
+        <button class="bt-s">3</button>
+        <button class="bt-s">-</button>
+      </div>
+      <div class="c-1">
+        <button class="bt-s">.</button>
+        <button class="bt-s">0</button>
+        <button class="bt-s">/</button>
+        <button class="bt-s">*</button>
+      </div>
+      <div class="c-2">
+        <button class="reset">reset</button>
+        <button class="igual">=</button>
+      </div>
+    </div>
   </div>
 </body>
 </html>
