--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </div>
   </div>
 
-  <script src="./calc.js"></script>
+  <script src="js/calc.js"></script>
+  <script src="js/switch.js"></script>
 </body>
 </html>
